tests/badinc5.out
./badinc5.mak:6:2: error: Couldn't open file "nosuchfile.dat"
 #nosuchfile.dat,
  ^~~~~~~~~~~~~~

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...
./badinc5.mak:7: warning: Unused fixed point "GX1"

Calculating statistics...

Survey contains 7 survey stations, joined by 5 legs.
There are 0 loops.
Survey has 2 connected components.
Total length of survey legs =    5.39m (   5.39m adjusted)
Total plan length of survey legs =    5.29m
Total vertical length of survey legs =    0.56m
Vertical range = 0.52m (from D1 at 1235.08m to C2 at 1234.56m)
North-South range = 3.15m (from D1 at 22.62m to B2 at 19.47m)
East-West range = 1.00m (from B2 at 11.23m to C2 at 10.23m)

There were 1 warning(s) and 1 error(s) - no output files produced.
